# immersive_music

./: README.md  main.py  main2.py  pyproject.toml
src/: AudioProcessor.py  GestureRecognition.py  MusicPlayer.py  gesture_recognition.py  menu.py  music_interactor.py  music_player.py
src2/: gesture_recognition.py  menu.py  music_interactor.py  music_player.py  test.py  test2.py  webcam.py
