[tool.poetry]
name = "music-bender"
version = "0.1.0"
description = ""
authors = ["Tomoya Tanabu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
mediapipe = "^0.10.18"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
